.infrastructure/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: todoapp-ingress
 namespace: todoapp
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
 rules:
 - http:
     paths:
     - pathType: Prefix
       path: /(/|$)(.*)
       backend:
         service:
           name: todoapp-service
           port:
             number: 80
     - pathType: Prefix
       path: /green(/|$)(.*)
       backend:
         service:
           name: kube2py-gree-service
           port:
             number: 80
